Fixed Projects Page: - Fixed failed wrapping of categories - Fixed overflow of projects

--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ video{
   gap:20px;
   margin-bottom: 20px;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .filter-buttons button{
@@ -599,6 +600,11 @@ p, h5{
 
     .header{
       margin: 20px 0px;
+    }
+
+    .flex-project{
+      min-width: 0;
+      width: 100% !important;
     }
 
     /* If Side Nav is used, uncomment code below */
